--- a/prescouterapp/WebContent/index.html
+++ b/prescouterapp/WebContent/index.html
@@ -127,8 +127,7 @@
 
 	</div>
 
-	<script src="lib/require.min.js"></script>
-	<script src="js/main.js"></script>
+	<script data-main="js/main.js" src="lib/require.min.js"></script>
 
 </body>
 </html>
