--- a/prescouterapp/WebContent/index.html
+++ b/prescouterapp/WebContent/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="prescouterApp">
+<html lang="en" >
 <head>
 <meta charset="UTF-8">
 <title>Prescouter Travel</title>
