--- a/prescouterapp/WebContent/index.html
+++ b/prescouterapp/WebContent/index.html
@@ -43,22 +43,22 @@
 					</div>
 					<div class="col-md-5 col-md-offset-1">
 						<div class="form-group">
-							<label for="exampleInputEmail1">From</label> <select
+							<label>From</label> <select
 								ng-model="departure" class="form-control" req>
 								<option ng-selected="true" value="">---Departure
 									City---</option>
 								<option
-									ng-repeat="info in travelData.deals | unique: 'departure'"
+									ng-repeat="info in travelData.deals | unique: 'departure' | orderBy: 'departure'"
 									value="{{ info.departure }}">{{ info.departure }}</option>
 							</select>
 						</div>
 					</div>
 					<div class="col-md-5">
 						<div class="form-group">
-							<label for="exampleInputEmail1">From</label> <select
+							<label>To</label> <select
 								ng-model="arrival" class="form-control"><option
 									ng-selected="true" value="">---Arrival City---</option>
-								<option ng-repeat="info in travelData.deals | unique: 'arrival'"
+								<option ng-repeat="info in travelData.deals | unique: 'arrival' | orderBy: 'arrival'"
 									value="{{ info.arrival }}">{{ info.arrival }}</option>
 							</select>
 						</div>
@@ -94,7 +94,7 @@
 			<div class="row" ng-if="showResults">
 				<div class="col-md-10 col-md-offset-1 search-area">
 					<div class="col-md-6 col-md-offset-3">
-						Showing <b class="font-color-blue">{{optionSelected}}</b> route(s) from <b class="font-color-green">{{departure}}</b> to <b class="font-color-green">{{arrival}}</b>
+						Showing <b class="font-color-blue">{{optionSelected}}</b> route(s) from <b class="font-color-green">{{departureSelected}}</b> to <b class="font-color-green">{{arrivalSelected}}</b>
 						<div
 							class="alert alert-info alert-dismissible text-center" ng-if="optionsRadios=='All'">No
 							results to show !!!</div>
